kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: application
  namespace: application

  labels:
    app: application
    project: multicloud-devsecops

spec:

  replicas: 2

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: application

  template:

    metadata:

      labels:
        app: application
        project: multicloud-devsecops

    spec:

      containers:

        - name: application

          image: YOUR_ECR_REPOSITORY_URL:latest

          imagePullPolicy: Always

          ports:

            - name: http
              containerPort: 8080
              protocol: TCP

          resources:

            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:

            httpGet:
              path: /actuator/health/readiness
              port: 8080

            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:

            httpGet:
              path: /actuator/health/liveness
              port: 8080

            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
