kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: application-service
  namespace: application

spec:

  type: ClusterIP

  selector:
    app: application

  ports:

    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
